<resources>
    <string name="app_name">BERITA_APP</string>
    <string name="Awal">BERITA APP</string>
    <string name="Heboh">Berita Heboh Saat Ini !!!</string>
    <string name="judul1">Perolehan Sementara Medali Asian Para Games 2018, Indonesia Masuk Posisi 5 Besar</string>
    <string name="kunci1">Memasuki hari kedua penyelenggaraan Asian Para Games 2018, lebih dari 20 medali emas telah diperebutkan. Indonesia pun diketahui telah meraih beberapa medali Asian Para Games 2018 meliputi emas, perak, dan perunggu.</string>
    <string name="berita1">Laporan Wartawan Grid.ID, Linda Fitria C Grid.ID - Gelaran Asian Para Games 2018 resmi dibuka sejak Sabtu (6/10/2018). Memasuki hari kedua penyelenggaraan Asian Para Games 2018, lebih dari 20 medali emas telah diperebutkan. Indonesia pun diketahui telah meraih beberapa medali Asian Para Games 2018 meliputi emas, perak, dan perunggu. Dilansir dari Instagram Kemenpora, emas pertama Indonesia didapat dari cabang olahraga bulu tangkis beregu diwakili oleh Hary Susanto CS. Perolehan medali untuk kontingen Indonesia terus bertambah dengan raihan medali perak Ni Nengah Widiasih dari cabor angkat berat 45 kg. Medali perunggu dari Syuci Indriani, atlet renang yang sukses berada di posisi ketiga dalam kategori gaya bebas 200 meter putri. Belum berakhir, perolehan medali untuk Indonesia hari ini, Senin (8/10/2018) kembali bertambah. Medali emas kedua Indonesia berhasil diraih Suparniyati dari cabor tolak peluru f20 dan medali perunggu dari Tiwa atas kategori yang sama. Dari cabor sepeda, lewat Muhammad Fadli Indonesia juga berhasil meraih satu medali perak. Raihan prestasi ini tentu membawa peringkat Indonesia terus naik ke posisi atas.</string>
    <string name="judul2">5 Fakta Sosok Suparni Yati, Penyumbang Emas Kedua di Asian Para Games</string>
    <string name="kunci2">1. Pemegang rekor Asia. Selain berhasil memenangkan medali emas untuk Indonesia, Suparni Yati juga berhasil memecahkan rekor Asia</string>
    <string name="berita2">1. Pemegang rekor Asia. Selain berhasil memenangkan medali emas untuk Indonesia, Suparni Yati juga berhasil memecahkan rekor Asia dengan mencatatkan lemparan sejauh 11,03 meter, menggeser rekor Asia milik atlet Malaysia atas nama Nursuhana binti Ramlan yang dibuatnya pada 2012 sejauh 10,71 meter ketika di Paralimpiade London 2012. 2. Masuk kategori F20. Suparni Yati menjadi atlet tolak peluru kategori F20, yakni atlet yang memiliki keterbatasan kecerdasan atau IQ.  3. Geluti tolak peluru sejak SD. Suparni mengaku ia belajar tolak peluru sejak SD. Dia dikenal sebagai anak penjual tempe, meskipun begitu, dengan semangatnya ia membuktikan bahwa ia akan menjadi sosok yang bear suatu hari nanti. 4. Ajang Asian Para Games pertama yang diikuti. Asian Para Games 2018 adalah ajang Asian Games pertama yang diikuti Suparni Yati. Dia langsung berhasil membuktikan dirinya yang terbaik, dan makin menambah semangatnya untuk mengikuti Paralimpiade di Tokyo pada 2020. 5. Dilatih oleh ayah angkat. Suparni Yati dilatih oleh Jasman, pelatih sekaligus ayah angkat Suparni sejak SD.</string>
    <string name="judul3">Prestasi Miftahul Jannah, Pejudo yang Kena Diskualifikasi karena Hijab</string>
    <string name="kunci3">Insiden tak mengenakkan dialami atlet judo Indonesia di Asian Para Games 2018, Miftahul Jannah. Perempuan asal Aceh tersebut terkena diskualifikasi sesaat akan bertanding melawan wakil Mongolia</string>
    <string name="berita3">VIVA – Insiden tak mengenakkan dialami atlet judo Indonesia di Asian Para Games 2018, Miftahul Jannah. Perempuan asal Aceh tersebut terkena diskualifikasi sesaat akan bertanding melawan wakil Mongolia, Oyun Gantulga, di JIExpo, Jakarta, Senin 8 Oktober 2018. Panitia pelaksana pertandingan tidak memperkenankan dia turun berlaga andai hijabnya tak dilepas. Akan tetapi, perempuan yang akrab disapa Miftah tersebut rela didiskualifikasi daripada melepas hijab yang digunakannya. Seharusnya Miftah turun bertanding pada nomor 52 kilogram putri kategori kebutaan. Dia dan Oyun bersaing memperebutkan tiket menuju babak delapan besar.</string>
    <string name="tgl">09/10/2018</string>
    <string name="klik">Baca selanjutnya.......</string>
    <string name="next">klik</string>
    <string name="judulawal">Heboh Berita Saat Ini 09/10/2018</string>
</resources>
